manifests/ui/app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: store-ui
  labels:
    type: sharded
spec:
  host: "open-store-management.apps.hiybv6c8.eastus.aroapp.io"
  path: "/"
  to:
    kind: Service
    name: store-ui
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
